Ajout d'une redirection après confirmation

--- a/views/Confirmation.ejs
+++ b/views/Confirmation.ejs
@@ -2,22 +2,18 @@
 <!doctype html>
 <html>
 <head>
-  <title>Confirmation</title>
-
-
+  <% include header0.ejs %>
 </head>
 <body>
-  <h2 style="text-align:center;padding-top:20px;">
-  Your submissions has been sent successfully!
-  </h2>
-  <script type="text/javascript">
-  var timer = 3; //seconds
-   website = "localhost:8080/"
-  function delayer() {
-   window.location = website;
-  }
-  setTimeout('delayer()', 1000 * timer);
-  </script>
+
+  <div class="jumbotron" style="text-align:center;padding-top:20px;">
+  <h1> Confirmé </h1>
+  <p> Votre modification a été prise en compte ! </p>
+</div>
+
+<script language="javascript" type="text/javascript">
+window.setTimeout('window.location="http://localhost:8080/profile"; ',3000);</script>
+
 
 </body>
 
