--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -237,7 +237,7 @@
           </div>
               <div class="modal-body">
 
-           <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer cotre saisie </div>
+           <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer votre saisie </div>
 
           </div>
             <div class="modal-footer ">
