--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -181,14 +181,12 @@ submitForms = function(){
 								<option value="g8">G8</option>
             </select>
 
-          </form>
       </div>
 			<a class="btn btn-primary next" href="#">Continuer</a>
 			<br><br>
 		</div>
 			<div class="tab-pane" id="step2">
 				<div class="form-area">
-						<form role="form" id="form2" action="/fvehicule" method="post">
 						<br>
 						<select name="preparation" class="form-group form-control select select-primary" data-toggle="select" required>
 								<option value="0" selected>Statut Préparation</option>
@@ -217,7 +215,30 @@ submitForms = function(){
 								<option value="p3">P3</option>
 						</select>
 						<br>
-				<button type="button" id="submit" name="submit" class="btn btn-success pull-right" onclick="submitForms()">Envoyer</button>
+
+		<p data-toggle="tooltip" title="su"><button type="button" class="btn btn-primary pull-right"data-toggle="modal" data-target="#delete">Envoyer</button></p>
+
+        <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+          <div class="modal-dialog">
+        <div class="modal-content">
+              <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+            <h4 class="modal-title custom_align" id="Heading"> Confirmer cette entrée </h4>
+          </div>
+              <div class="modal-body">
+
+           <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer votre saisie </div>
+
+          </div>
+            <div class="modal-footer ">
+            <button type="submit" class="btn btn-success" onclick="submitForms()" ><span class="glyphicon glyphicon-ok-sign"></span> Confirmer </button>
+            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Vérifier </button>
+          </div>
+          </div>
+        <!-- /.modal-content -->
+        </div>
+          <!-- /.modal-dialog -->
+        </div>
 			</div>
 
 		</div>
