Modification avec confirmation de la table

--- a/views/chercher_vehicule.ejs
+++ b/views/chercher_vehicule.ejs
@@ -116,7 +116,7 @@
               <input type="text" id='myimmat' name="immat" class="typeahead form-control" placeholder="Immat" onFocus="updMVA()" />
             </div>
 
-    			  <button type="submit" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Chercher </button>
+    			  <button type="submit" class="btn btn-primary pull-right" ><span class="glyphicon glyphicon-ok-sign"></span> Chercher </button>
 
 
 
