--- a/views/header0.ejs
+++ b/views/header0.ejs
@@ -12,6 +12,7 @@
 	<!--Scripts à mettre dans un footer éventuellement, pour optimiser le chargement-->
 
 	<script src="/dist/js/bootstrap-table.js"></script>
+	<link rel="stylesheet" href="bootstrap-table.css">
 
 	<style>
 		body 		{
