post agences working

--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -55,6 +55,8 @@
 	            <li><a href="/transfertvehicule">Transférer</a></li>
 	            <li role="separator" class="divider"></li>
 	            <li><a href="/preparevehicule">À préparer</a></li>
+	            <li role="separator" class="divider"></li>
+	            <li><a href="/chercher_vehicule">Chercher</a></li>
 	          </ul>
 	        </li>
 
