--- a/views/chercher_vehicule_resp.ejs
+++ b/views/chercher_vehicule_resp.ejs
@@ -184,6 +184,21 @@
 
    <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer votre saisie </div>
 
+          <div class="form-group">
+          <input class="form-control " type="text" value=<%=vehicules.MVA%>>
+          </div>
+          <div class="form-group">
+          <input class="form-control " type="text" placeholder="IMMAT" value=>
+          </div>
+          <div class="form-group">
+          <input class="form-control " type="text" placeholder="Agence">
+          </div>
+          <div class="form-group">
+          <input class="form-control " type="text" placeholder="Agence">
+          </div>
+          <div class="form-group">
+          <input class="form-control " type="text" placeholder="Agence">
+          </div>
   </div>
     <div class="modal-footer ">
     <button type="button" class="btn btn-success" onclick='modif()' ><span class="glyphicon glyphicon-ok-sign" ></span> Confirmer </button>
