--- a/views/header.ejs
+++ b/views/header.ejs
@@ -82,6 +82,8 @@
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-home"></span>  Agence <span class="caret"></span></h3></a>
 				<ul class="dropdown-menu">
 					<li><a href="/agences"> Liste des agences </a></li>
+					<li role="separator" class="divider"></li>
+					<li><a href="/chercher_agence">Chercher</a></li>
 				</ul>
 			</li>
 
@@ -91,6 +93,8 @@
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-screenshot"></span>  Parking <span class="caret"></span></h3></a>
 			<ul class="dropdown-menu">
 				<li><a href="/parking"> Liste des parkings </a></li>
+				<li role="separator" class="divider"></li>
+				<li><a href="/chercher_parking">Chercher</a></li>
 			</ul>
 		</li>
 	</ul>
