--- a/views/header0.ejs
+++ b/views/header0.ejs
@@ -59,7 +59,7 @@
 	            <li role="separator" class="divider"></li>
 	            <li><a href="/preparevehicule">À préparer</a></li>
 	            <li role="separator" class="divider"></li>
-	            <li><a href="/chercher_vehicule">Chercher</a></li>
+	            <li><a href="/chercher_vehicule">Chercher/Modifier</a></li>
 	          </ul>
 	        </li>
 
@@ -83,6 +83,8 @@
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-home"></span>  Agence <span class="caret"></span></h3></a>
 				<ul class="dropdown-menu">
 					<li><a href="/agences"> Liste des agences </a></li>
+					<li role="separator" class="divider"></li>
+					<li><a href="/chercher_agence">Chercher/Modifier</a></li>
 				</ul>
 			</li>
 
@@ -92,6 +94,8 @@
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-screenshot"></span>  Parking <span class="caret"></span></h3></a>
 			<ul class="dropdown-menu">
 				<li><a href="/parking"> Liste des parkings </a></li>
+				<li role="separator" class="divider"></li>
+				<li><a href="/chercher_parking">Chercher/Modifier</a></li>
 			</ul>
 		</li>
 	</ul>
