--- a/views/header.ejs
+++ b/views/header.ejs
@@ -86,7 +86,7 @@
 				<ul class="dropdown-menu">
 					<li><a href="/agences"> Liste des agences </a></li>
 					<li role="separator" class="divider"></li>
-					<li><a href="/chercher_agence">Chercher</a></li>
+					<li><a href="/chercher_agence">Chercher/Modifier</a></li>
 				</ul>
 			</li>
 
@@ -97,7 +97,7 @@
 			<ul class="dropdown-menu">
 				<li><a href="/parking"> Liste des parkings </a></li>
 				<li role="separator" class="divider"></li>
-				<li><a href="/chercher_parking">Chercher</a></li>
+				<li><a href="/chercher_parking">Chercher/Modifier</a></li>
 			</ul>
 		</li>
 	</ul>
