no toggle bootstrap table

--- a/views/chercher_vehicule_resp.ejs
+++ b/views/chercher_vehicule_resp.ejs
@@ -185,10 +185,7 @@
    <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer votre saisie </div>
 
           <div class="form-group">
-          <input class="form-control " type="text" value=<%=vehicules.MVA%>>
-          </div>
-          <div class="form-group">
-          <input class="form-control " type="text" placeholder="IMMAT" value=>
+          <input class="form-control " type="text" placeholder="IMMAT">
           </div>
           <div class="form-group">
           <input class="form-control " type="text" placeholder="Agence">
