--- a/views/recuperer_vehicule.ejs
+++ b/views/recuperer_vehicule.ejs
@@ -56,7 +56,7 @@ $(function () {
 		<br>
   </div>
  
-	<table  data-toggle="table" class = "table table-hover table-bordered text-center">
+	<table class = "table table-hover table-bordered text-center">
 		<div class="text-center">
 			<tr>
 			<th> MVA</th>
