--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -52,7 +52,7 @@ $('#deleteButton').click(function(){
 		<br>
   </div>
 
-	<table  data-toggle="table" id="myTable" data-toggle="table" data-pagination="true" data-search="true" data-height="400" data-page-list="[5, 10, 20, 50, 100, 200]">
+	<table id="myTable">
 		<div class="text-center">
 			<tr>
 			<th data-field="MVA">MVA</th>
