--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -145,27 +145,27 @@
         <div class="form-group">
           <p>
             <label for="Aspiration intérieure"> Aspiration intérieure  :  </label>
-            <input id="Aspiration intérieure" name="Contrôle intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Aspiration intérieure" name="Contrôl_-intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
         <div class="form-group">
           <p>
             <label for="Lavage extérieure"> Lavage extérieure  : </label>
-            <input id="Lavage extérieure" name="Lavage extérieure" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Lavage extérieure" name="Lavage_extérieure" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
         <div class="form-group">
           <p>
             <label for="Nettoyage vitre"> Nettoyage vitre  : </label>
-            <input id="Nettoyage vitre" name="Nettoyage vitre" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Nettoyage vitre" name="Nettoyage_vitre" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
         <div class="form-group">
           <p>
-            <label for="Nettoyage parebrise intérieur"> Nettoyage parebrise intérieur  : </label>
+            <label for="Nettoyage_parebrise_intérieur"> Nettoyage parebrise intérieur  : </label>
             <input id="Nettoyage parebrise intérieur" name="Nettoyage parebrise intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
@@ -173,35 +173,35 @@
         <div class="form-group">
           <p>
             <label for="Niveau huile"> Niveau huile  : </label>
-            <input id="Niveau huile" name="Niveau huile" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Niveau huile" name="Niveau_huile" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
         <div class="form-group">
           <p>
             <label for="Niveau lave-glace"> Niveau lave-glace  : </label>
-            <input id="Niveau lave-glace" name="Niveau lave-glace" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Niveau lave-glace" name="Niveau_lave-glace" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
         <div class="form-group">
           <p>
             <label for="Pression pneus"> Pression pneus  : </label>
-            <input id="Pression pneus" name="Pression pneus" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Pression pneus" name="Pression_pneus" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
         <div class="form-group">
           <p>
             <label for="Contrôle carrosserie"> Contrôle carrosserie  : </label>
-            <input id="Contrôle carrosserie" name="Contrôle carrosserie" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait" default-value="lol">
+            <input id="Contrôle carrosserie" name="Contrôle_carrosserie" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait" default-value="lol">
           </p>
         </div>
 
         <div class="form-group">
           <p>
             <label for="Contrôle intérieur"> Contrôle intérieur  : </label>
-            <input id="Contrôle intérieur" name="Aspiration intérieure" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Contrôle intérieur" name="Aspiration_intérieure" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
