--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,40 +4,7 @@
 	<head>
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 		<script>
-			$('#edit').on('show.bs.modal', function(e) {
-					console.log("testetete");
-			});
 
-	$(".modal-dialog").click(function() {
-    var $row = $(this).closest("tr");    // Find the row
-    var $text = $row.find(".mva").text(); // Find the text
-
-    // Let's test it out
-    alert($text);
-});
-
-
-$('#myTable > tr').click(function() {
-    // row was clicked
-		alert("rowclicked");
-});
-
-$('#edit').on('show.bs.modal', function (event) {
-  var button = $(event.relatedTarget) // Button that triggered the modal
-  var recipient = button.data('whatever') // Extract info from data-* attributes
-  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-  var modal = $(this)
-  modal.find('.modal-body input').val(recipient)
-})
-
-$('#deleteButton').click(function(){
-	$.post('')
-});
-
-$('#deleteButton').click(function(){
-	$.post('')
-});
 
 
 		</script>
@@ -52,20 +19,20 @@ $('#deleteButton').click(function(){
 		<br>
   </div>
 
-	<table id="myTable">
+	<table data-toggle="table" id="myTable">
 		<div class="text-center">
 			<tr>
-			<th data-field="MVA">MVA</th>
-			<th data-field="Immatriculation" data-sortable="true">Immatriculation</th>
-			<th data-field="Lieu actuel" data-sortable="true">Lieu actuel</th>
-			<th data-field="Statut" data-sortable="true">Statut</th>
-			<th data-field="Station départ" data-sortable="true">Station départ</th>
-			<th data-field="Station retour" data-sortable="true">Station retour</th>
-			<th data-field="Date départ" data-sortable="true">Date départ</th>
-			<th data-field="Date retour" data-sortable="true">Date retour</th>
-			<th data-field="Numéro contrat" data-sortable="true">Numéro contrat</th>
-			<th data-field="Marque" data-sortable="true">Marque</th>
-			<th data-field="Libellé modèle" data-sortable="true">Libellé modèle</th>
+			<th>MVA</th>
+			<th>Immatriculation</th>
+			<th>Lieu actuel</th>
+			<th>Statut</th>
+			<th>Station départ</th>
+			<th>Station retour</th>
+			<th>Date départ</th>
+			<th>Date retour</th>
+			<th>Numéro contrat</th>
+			<th>Marque</th>
+			<th>Libellé modèle</th>
 
 			</tr>
 	</div>
