--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,40 +4,7 @@
 	<head>
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 		<script>
-			$('#edit').on('show.bs.modal', function(e) {
-					console.log("testetete");
-			});
 
-	$(".modal-dialog").click(function() {
-    var $row = $(this).closest("tr");    // Find the row
-    var $text = $row.find(".mva").text(); // Find the text
-
-    // Let's test it out
-    alert($text);
-});
-
-
-$('#myTable > tr').click(function() {
-    // row was clicked
-		alert("rowclicked");
-});
-
-$('#edit').on('show.bs.modal', function (event) {
-  var button = $(event.relatedTarget) // Button that triggered the modal
-  var recipient = button.data('whatever') // Extract info from data-* attributes
-  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-  var modal = $(this)
-  modal.find('.modal-body input').val(recipient)
-})
-
-$('#deleteButton').click(function(){
-	$.post('')
-});
-
-$('#deleteButton').click(function(){
-	$.post('')
-});
 
 		</script>
 		<% include header.ejs %>
@@ -51,7 +18,7 @@ $('#deleteButton').click(function(){
 		<br>
   </div>
 
-	<table  class = "table table-hover table-bordered text-center" id="myTable">
+	<table data-toggle="table" class = "table table-hover table-bordered text-center" id="myTable">
 		<div class="text-center">
 			<tr>
 			<th> MVA</th>
