--- a/views/chercher_parking_resp.ejs
+++ b/views/chercher_parking_resp.ejs
@@ -185,7 +185,7 @@
         			url: 'http://localhost:8080/modifier_parking',
         			data : {
         			nom : $( '#nom' ).html(),
-        			adresse : $( '#agence' ).html()
+        			agence : $( '#agence' ).html()
         				},
 
         			success : function (data) {
